Added Comment + Actors functionality

--- a/ClientApp/src/app/components/create-movie-modal/create-movie-modal.component.html
+++ b/ClientApp/src/app/components/create-movie-modal/create-movie-modal.component.html
@@ -29,6 +29,12 @@
   </mat-form-field>
 
   <mat-form-field appearance="fill">
+    <mat-label>Poster URL</mat-label>
+    <textarea matInput formControlName="posterUrl"
+              id="posterUrl" name="posterUrl"></textarea>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
     <mat-label>Release Date</mat-label>
     <input matInput [matDatepicker]="releaseDatePicker"
            formControlName="releaseDate" id="releaseDate" name="releaseDate">
