--- a/ClientApp/src/app/components/toolbar/toolbar.component.html
+++ b/ClientApp/src/app/components/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <h5>Toolbar</h5>
+  <h5>{{toolbarTitle}}</h5>
   <div *ngIf="activeToolbar">
     <button mat-button (click)="onMore()">
       <mat-icon>add</mat-icon>
