--- a/ClientApp/src/app/components/actors-table/actors-table.component.html
+++ b/ClientApp/src/app/components/actors-table/actors-table.component.html
@@ -1,5 +1,4 @@
 <app-toolbar (toolbarEvent)="triggerToolbarEvent($event)"
-             [toolbarTitle]="setToolbarTitle()"
              [numberOfItems]="numberOfResults"
              [activeToolbar]="isToolbarActive"></app-toolbar>
 <div class="container">
@@ -20,29 +19,13 @@
 
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-        <td mat-cell *matCellDef="let movie"> {{ movie.id }} </td>
+        <td mat-cell *matCellDef="let actor"> {{ actor.id }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-        <td mat-cell *matCellDef="let movie"> {{movie.title}} </td>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <td mat-cell *matCellDef="let actor"> {{actor.name}} </td>
       </ng-container>
-
-      <ng-container matColumnDef="duration">
-        <th mat-header-cell *matHeaderCellDef>Duration</th>
-        <td mat-cell *matCellDef="let movie"> {{movie.duration}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="releaseDate">
-        <th mat-header-cell *matHeaderCellDef>Release Date</th>
-        <td mat-cell *matCellDef="let movie"> {{ movie.releaseDate }} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="originalTitle">
-        <th mat-header-cell *matHeaderCellDef>Original Title</th>
-        <td mat-cell *matCellDef="let movie"> {{ movie.originalTitle }} </td>
-      </ng-container>
-
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"
