--- a/ClientApp/src/app/components/movie-comment/movie-comment.component.html
+++ b/ClientApp/src/app/components/movie-comment/movie-comment.component.html
@@ -1,9 +1,9 @@
 <mat-card class="card">
   <mat-card-header>
     <div mat-card-avatar class="header-image"
-         [ngStyle]="{'background-image': 'url(' + comment.user.avatar + ')'}"></div>
-    <mat-card-title>{{comment.user.username}}</mat-card-title>
-    <mat-card-subtitle>{{comment.user.role}}</mat-card-subtitle>
+         [ngStyle]="{'background-image': 'url(' + comment.author.avatar + ')'}"></div>
+    <mat-card-title>{{comment.author.username}}</mat-card-title>
+    <mat-card-subtitle>{{comment.author.role}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <p>
@@ -13,11 +13,11 @@
   <mat-card-actions>
     <button mat-button matBadge="{{comment.thumbsUp.length}}" matBadgePosition="above after" matBadgeSize="small" matBadgeColor="primary"
             (click)="thumbsUp()">
-      <mat-icon>thumb_up</mat-icon>
+      <mat-icon>thumb_up_alt</mat-icon>
     </button>
     <button mat-button matBadge="{{comment.thumbsDown.length}}" matBadgePosition="above after" matBadgeSize="small" matBadgeColor="warn"
             (click)="thumbsDown()">
-      <mat-icon>thumb_down</mat-icon>
+      <mat-icon>thumb_down_alt</mat-icon>
     </button>
   </mat-card-actions>
 </mat-card>
