--- a/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -28,6 +28,12 @@
           <li *ngIf="applicationService.isLoggedIn()" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/movies']">Movies</a>
           </li>
+          <li *ngIf="applicationService.isLoggedIn()" class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/actors']">Actors</a>
+          </li>
+          <li *ngIf="applicationService.isLoggedIn()" class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/profile']">Profile</a>
+          </li>
           <li *ngIf="!applicationService.isLoggedIn()" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/login']">Login</a>
           </li>
