--- a/ClientApp/src/app/components/movie-comment-add/movie-comment-add.component.html
+++ b/ClientApp/src/app/components/movie-comment-add/movie-comment-add.component.html
@@ -5,7 +5,7 @@
     <form mat-dialog-content [formGroup]="commentForm">
       <mat-form-field>
         <mat-label>Comment</mat-label>
-        <textarea style="width: 500px" matInput formControlName="message" id="message" name="message"></textarea>
+        <textarea matInput formControlName="message" id="message" name="message"></textarea>
       </mat-form-field>
     </form>
 
