--- a/ClientApp/src/app/components/movies-table/movies-table.component.html
+++ b/ClientApp/src/app/components/movies-table/movies-table.component.html
@@ -29,7 +29,7 @@
       </ng-container>
 
       <ng-container matColumnDef="duration">
-        <th mat-header-cell *matHeaderCellDef>Duration</th>
+        <th mat-header-cell *matHeaderCellDef>Duration in minutes</th>
         <td mat-cell *matCellDef="let movie"> {{movie.duration}} </td>
       </ng-container>
 
